[metadata]
name = silx
version = attr: silx._version.strictversion
url = http://www.silx.org/
author = data analysis unit
author_email = silx@esrf.fr
description = Software library for X-ray data analysis
long_description = file: README.rst
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: MacOS X
    Environment :: Win32 (MS Windows)
    Environment :: X11 Applications :: Qt
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Cython
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering :: Physics
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
python_requires = >=3.7
packages = find:
package_dir =
    =src
    silx.examples = examples

[options.entry_points]
console_scripts =
    silx = silx.__main__:main

[options.packages.find]
where = src
include = silx*

[options.package_data]
# Resources files for silx
silx.resources =
    gui/logo/*.png
    gui/logo/*.svg
    gui/icons/*.png
    gui/icons/*.svg
    gui/icons/*.mng
    gui/icons/*.gif
    gui/icons/*/*.png
    opencl/*.cl
    opencl/image/*.cl
    opencl/sift/*.cl
    opencl/codec/*.cl
    gui/colormaps/*.npy
silx.examples = *.png
