subdir('sx')
subdir('opencl')
subdir('gui')
subdir('io')
subdir('resources')
subdir('app')
subdir('utils')
subdir('math')
subdir('third_party')
subdir('image')
subdir('test')

py.install_sources([
    '__init__.py',
    '__main__.py',
    '_config.py',
    '_utils.py',
    '_version.py',
    'conftest.py',
]
pure: false,    # Will be installed next to binaries
subdir: 'silx',  # Folder relative to site-packages to install to
)
