subdir('plot')
subdir('fit')
subdir('qt')
subdir('utils')
subdir('_glutils')
subdir('hdf5')
subdir('dialog')
subdir('widgets')
subdir('data')
subdir('test')
subdir('plot3d')


py.install_sources([
    '__init__.py',
    'colors.py',
    'conftest.py',
    'console.py',
    'constants.py',
    'icons.py',
    'printer.py',
],
pure: false,    # Will be installed next to binaries
subdir: 'silx/gui',  # Folder relative to site-packages to install to
)
