subdir('marchingsquares')
subdir('test')


py.install_sources([
    '__init__.py',
    '_boundingbox.py',
    'backprojection.py',
    'medianfilter.py',
    'phantomgenerator.py',
    'projection.py',
    'reconstruction.py',
    'sift.py',
    'tomography.py',
    'utils.py',
],
pure: false,    # Will be installed next to binaries
subdir: 'silx/image',  # Folder relative to site-packages to install to
)
