subdir('codec')
subdir('sift')
subdir('test')

py.install_sources([
    '__init__.py',
    'atomic.py',
    'backprojection.py',
    'common.py',
    'conftest.py',
    'convolution.py',
    'image.py',
    'linalg.py',
    'medfilt.py',
    'processing.py',
    'projection.py',
    'reconstruction.py',
    'sinofilter.py',
    'sparse.py',
    'statistics.py',
    'utils.py',
]
pure: false,    # Will be installed next to binaries
subdir: 'silx/opencl',  # Folder relative to site-packages to install to
)
