subdir('include')
subdir('test')


py.install_sources([
    'ExternalResources.py',
    '__init__.py',
    'array_like.py',
    'debug.py',
    'deprecation.py',
    'enum.py',
    'exceptions.py',
    'files.py',
    'launcher.py',
    'number.py',
    'property.py',
    'proxy.py',
    'retry.py',
    'testutils.py',
    'weakref.py',
],
pure: false,    # Will be installed next to binaries
subdir: 'silx/utils',  # Folder relative to site-packages to install to
)
