subdir('test')

py.install_sources([
    'About.py',
    'ApplicationContext.py',
    'CustomNxdataWidget.py',
    'CustomPlotSelectionWindow.py',
    'DataPanel.py',
    'Viewer.py',
    '__init__.py',
    'main.py',
]
pure: false,    # Will be installed next to binaries
subdir: 'silx/app/view',  # Folder relative to site-packages to install to
)
