subdir('test')


py.install_sources([
    'Context.py',
    'FramebufferTexture.py',
    'OpenGLWidget.py',
    'Program.py',
    'Texture.py',
    'VertexBuffer.py',
    '__init__.py',
    'font.py',
    'gl.py',
    'utils.py',
],
pure: false,    # Will be installed next to binaries
subdir: 'silx/gui/_glutils',  # Folder relative to site-packages to install to
)
