subdir('test')


py.install_sources([
    'ArrayTableModel.py',
    'ArrayTableWidget.py',
    'DataViewer.py',
    'DataViewerFrame.py',
    'DataViewerSelector.py',
    'DataViews.py',
    'Hdf5TableView.py',
    'HexaTableView.py',
    'NXdataWidgets.py',
    'NumpyAxesSelector.py',
    'RecordTableView.py',
    'TextFormatter.py',
    '_RecordPlot.py',
    '_VolumeWindow.py',
    '__init__.py',
],
pure: false,    # Will be installed next to binaries
subdir: 'silx/gui/data',  # Folder relative to site-packages to install to
)
