subdir('test')


py.install_sources([
    'AbstractDataFileDialog.py',
    'ColormapDialog.py',
    'DataFileDialog.py',
    'DatasetDialog.py',
    'FileTypeComboBox.py',
    'GroupDialog.py',
    'ImageFileDialog.py',
    'SafeFileIconProvider.py',
    'SafeFileSystemModel.py',
    '__init__.py',
    'utils.py',
],
pure: false,    # Will be installed next to binaries
subdir: 'silx/gui/dialog',  # Folder relative to site-packages to install to
)
