subdir('test')


py.install_sources([
    'Hdf5Formatter.py',
    'Hdf5HeaderView.py',
    'Hdf5Item.py',
    'Hdf5LoadingItem.py',
    'Hdf5Node.py',
    'Hdf5TreeModel.py',
    'Hdf5TreeView.py',
    'NexusSortFilterProxyModel.py',
    '__init__.py',
    '_utils.py',
],
pure: false,    # Will be installed next to binaries
subdir: 'silx/gui/hdf5',  # Folder relative to site-packages to install to
)
