subdir('stats')
subdir('utils')
subdir('_utils')
subdir('items')
subdir('tools')
subdir('backends')
subdir('actions')
subdir('test')


py.install_sources([
    'AlphaSlider.py',
    'ColorBar.py',
    'CompareImages.py',
    'ComplexImageView.py',
    'CurvesROIWidget.py',
    'ImageStack.py',
    'ImageView.py',
    'Interaction.py',
    'ItemsSelectionDialog.py',
    'LegendSelector.py',
    'LimitsHistory.py',
    'MaskToolsWidget.py',
    'PlotEvents.py',
    'PlotInteraction.py',
    'PlotToolButtons.py',
    'PlotWidget.py',
    'PlotWindow.py',
    'PrintPreviewToolButton.py',
    'Profile.py',
    'ROIStatsWidget.py',
    'ScatterMaskToolsWidget.py',
    'ScatterView.py',
    'StackView.py',
    'StatsWidget.py',
    '_BaseMaskToolsWidget.py',
    '__init__.py',
],
pure: false,    # Will be installed next to binaries
subdir: 'silx/gui/plot',  # Folder relative to site-packages to install to
)
