subdir('utils')
subdir('items')
subdir('_model')
subdir('tools')
subdir('scene')
subdir('actions')
subdir('test')


py.install_sources([
    'ParamTreeView.py',
    'Plot3DWidget.py',
    'Plot3DWindow.py',
    'SFViewParamTree.py',
    'ScalarFieldView.py',
    'SceneWidget.py',
    'SceneWindow.py',
    '__init__.py',
    'conftest.py',
],
pure: false,    # Will be installed next to binaries
subdir: 'silx/gui/plot3d',  # Folder relative to site-packages to install to
)
