subdir('glutils')
subdir('test')


py.install_sources([
    '__init__.py',
    'concurrent.py',
    'image.py',
    'matplotlib.py',
    'projecturl.py',
    'qtutils.py',
    'signal.py',
    'testutils.py',
],
pure: false,    # Will be installed next to binaries
subdir: 'silx/gui/utils',  # Folder relative to site-packages to install to
)
