subdir('test')


py.install_sources([
    'BoxLayoutDockWidget.py',
    'ButtonOverlay.py',
    'ColormapNameComboBox.py',
    'ElidedLabel.py',
    'FloatEdit.py',
    'FlowLayout.py',
    'FormGridLayout.py',
    'FrameBrowser.py',
    'HierarchicalTableView.py',
    'LabelOverlay.py',
    'LegendIconWidget.py',
    'MedianFilterDialog.py',
    'MultiModeAction.py',
    'PeriodicTable.py',
    'PrintGeometryDialog.py',
    'PrintPreview.py',
    'RangeSlider.py',
    'StackedProgressBar.py',
    'TableWidget.py',
    'ThreadPoolPushButton.py',
    'UrlList.py',
    'UrlSelectionTable.py',
    'WaitingOverlay.py',
    'WaitingPushButton.py',
    '_OverlayMixIn.py',
    '__init__.py',
],
pure: false,    # Will be installed next to binaries
subdir: 'silx/gui/widgets',  # Folder relative to site-packages to install to
)
