
py.install_sources([
    '__init__.py',
    'test_commonh5.py',
    'test_dictdump.py',
    'test_fabioh5.py',
    'test_fioh5.py',
    'test_h5link_utils.py',
    'test_h5py_utils.py',
    'test_nxdata.py',
    'test_octaveh5.py',
    'test_rawh5.py',
    'test_sliceh5.py',
    'test_specfile.py',
    'test_specfilewrapper.py',
    'test_spech5.py',
    'test_spectoh5.py',
    'test_url.py',
    'test_utils.py',
    'test_write_to_h5.py',
]
pure: false,    # Will be installed next to binaries
subdir: 'silx/io/test',  # Folder relative to site-packages to install to
)
