
py.install_sources([
    '__init__.py',
    'benchmark_combo.py',
    'histo_benchmarks.py',
    'test_HistogramndLut_nominal.py',
    'test_calibration.py',
    'test_colormap.py',
    'test_combo.py',
    'test_histogramnd_error.py',
    'test_histogramnd_nominal.py',
    'test_histogramnd_vs_np.py',
    'test_interpolate.py',
    'test_marchingcubes.py',
]
pure: false,    # Will be installed next to binaries
subdir: 'silx/math/test',  # Folder relative to site-packages to install to
)
