
py.install_sources([
    '__init__.py',
    'test_addition.py',
    'test_array_utils.py',
    'test_backprojection.py',
    'test_convolution.py',
    'test_doubleword.py',
    'test_image.py',
    'test_kahan.py',
    'test_linalg.py',
    'test_medfilt.py',
    'test_processing.py',
    'test_projection.py',
    'test_sparse.py',
    'test_stats.py',
],
pure: false,    # Will be installed next to binaries
subdir: 'silx/opencl/test',  # Folder relative to site-packages to install to
)
